# Multi-language-Real-time-Order-Processing-System-MROPS-

./: Makefile  README.md  docker-compose.yml  kafka_server_jaas.conf  zookeeper_server_jaas.conf
order_service/order_api/: pyproject.toml
order_service/order_api/src/order_api/: main-2.py  main.py
order_service/order_api/src/order_api/kafka_utils/: kafka_producer.py
order_service/order_api/src/order_api/models/: order.py
order_service/order_api/src/order_api/scripts/: send_data.sh
order_service/order_api/src/order_api/tests/: teste_order.py
