[project]
name = "order-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Gileno",email = "gilenoduarte.jobs@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "kafka (>=1.3.5,<2.0.0)",
    "kafka-python-ng (>=2.2.3,<3.0.0)",
    "confluent-kafka (>=2.10.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "order_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
